# sdf_peck

./: Cargo.toml
assets/: march.wgsl  query_target.sdf3d  sphere_stage.sdf3d
examples/: capsules.rs  raycast.rs  spheres.rs
src/: adder.rs  avian.rs  collider.rs  lib.rs  primitives.rs  spatial_query.rs
